--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">IGexperiments</string>
     <string name="top_red_text">When you killed IG, open it and go to settings and click on internal to access to dev options. It might not work on non tested versions because of the class or method name. Betas versions has readable experiments name, you can enable "is_employee" to be able to access the menu when you update Instagram.</string>
     <string name="download">Download your chosen version: %1$s</string>
-    <string name="app_kill">Kill Instagram</string>
+    <string name="app_kill">Kill &amp; launch Instagram</string>
     <string name="infohook">If there is no update for you IG version, you can give the class name below and contribute. If you don\'t know how to do it, read the readme from my github repo:  https://github.com/xHookman/IGexperiments/</string>
     <string name="classname">Class name (ex : X.8W4)</string>
     <string name="methodname">Method name (ex : A00)</string>
